# fsnd-trivia

./: .gitignore  README.md
backend/: README.md  models.py  pyproject.toml  test_flaskr.py  trivia.psql
backend/flaskr/: __init__.py
frontend/: package-lock.json  package.json
frontend/src/components/: QuestionView.js
